--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "liuwe/data-api",
-    "description": "data-api",
+    "name": "liuwe/database",
+    "description": "database",
     "license": "Apache2",
     "authors": [
         {
